--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div>
           <label for="email">Email:</label>
-          <input type="text" id="email">
+          <input type="email" id="email">
         </div>
         <input class="btn" type="submit" value="Submit">
       </form>
@@ -35,7 +35,8 @@
         <li class="item">Item 3</li>
       </ul> -->
     </section>
-    
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+
 
     <script src="main.js"></script>
   </body>
